Fixed images are not visible on mobile.

--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -23,7 +23,14 @@ $color-secondary: #c4c4c4;
   }
 
   &--slider {
-    margin: 50px auto 75px;
+    margin-top: 50px;
+    margin-bottom: 75px;
+
+    @media screen and (min-width: $screen-sm-min) {
+      margin-left: auto;
+      margin-right: auto;
+    }
+
     clear: both;
 
     > ul {
